2010-10-06  Miguel de Dios  <miguel.dedios@artica.es>

	* include/config_process.php: force the absolute path when include the
	languages translation files.

2010-10-05  Sancho Lerena  <slerena@artica.es>

    * include/config_process.php: Remove config['debug'] from prev. commit.

    * include/config_process.php: Set to 0 $config['debug'] by default to avoid
    debug messages on normal operation mode, developers should setup debug
    mode in their config.php file.

    * pandoradb_data.sql: Added default template and action as sample.

2010-10-05  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_reporting.php: cleaned source code style and optimize
	some parts (deleted redundant if sentences).
	
	* include/functions_db.php: cleaned source code style.

2010-10-05  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/estado_ultimopaquete.php
	operation/agentes/estado_monitores.php: Added the policy
	column to the monitors in agent view and improve the header
	of force execution in few monitors view for bug: 3078713

2010-10-05  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/estado_ultimopaquete.php: Added the policy
	column to the monitors list for bug 3078713

2010-10-04  Sergio Martin <sergio.martin@artica.es>

	* include/languages/cs.po
	include/languages/et.mo
	include/languages/pt_BR.po
	include/languages/nl.mo
	include/languages/es.po
	include/languages/pl.mo
	include/languages/it.mo
	include/languages/ko.po
	include/languages/sl.mo
	include/languages/sk.po
	include/languages/uk.po
	include/languages/ro.po
	include/languages/pt.mo
	include/languages/ast.mo
	include/languages/en_AU.mo
	include/languages/bg.mo
	include/languages/index.pot
	include/languages/bn.po
	include/languages/ar.po
	include/languages/cs.mo
	include/languages/pt_BR.mo
	include/languages/es.mo
	include/languages/ko.mo
	include/languages/fr.po
	include/languages/sk.mo
	include/languages/uk.mo
	include/languages/ro.mo
	include/languages/ca.po